--- a/src/components/Archy/Archy.css
+++ b/src/components/Archy/Archy.css
@@ -14,11 +14,11 @@ li {
   border-left: 2px solid #000;
   margin-left: 1em;
 }
-li div {
+li .archy {
   padding-left: 1em;
   position: relative;
 }
-li div::before {
+li .archy::before {
   content:'';
   position: absolute;
   top: 0;
