--- a/src/components/TouchableArchyLabel/TouchableArchyLabel.css
+++ b/src/components/TouchableArchyLabel/TouchableArchyLabel.css
@@ -1,6 +1,7 @@
 
-.archy-label {
+.touchable-archy-label {
    display: inline-block;
    font-size: 1.5em;
    font-family: 'Roboto', sans-serif;
+   cursor: pointer;
 }
