--- a/src/components/RegisterForm/RegisterForm.css
+++ b/src/components/RegisterForm/RegisterForm.css
@@ -1,11 +1,11 @@
 
-.LoginForm-container {
+.SignUpForm-container {
   margin: 40px auto;
   padding: 20px 20px 40px 20px;
   max-width: var(--max-content-width);
 }
 
-.forgot-button-container {
+.error-text-container {
   margin-top: 10px;
   max-width: var(--max-content-width);
   text-align: center;
