Add profile images and auth routes

--- a/src/components/CoverImage/CoverImage.css
+++ b/src/components/CoverImage/CoverImage.css
@@ -1,4 +1,13 @@
 
 .CoverImage-img {
   background-color: #fafafa;
+  cursor: pointer;
+}
+
+.modal {
+    display: none;
+}
+
+.CoverImage-container:hover .modal {
+    display: block;
 }
