--- a/src/components/TouchableArchyLabel/TouchableArchyLabel.css
+++ b/src/components/TouchableArchyLabel/TouchableArchyLabel.css
@@ -3,5 +3,6 @@
    display: inline-block;
    font-size: 1.5em;
    font-family: 'Roboto', sans-serif;
+   font-weight: 300;
    cursor: pointer;
 }
