--- a/src/components/ForgotForm/ForgotForm.css
+++ b/src/components/ForgotForm/ForgotForm.css
@@ -1,5 +1,5 @@
 
-.RegisterForm-container {
+.ForgotForm-container {
   margin: 40px auto;
   padding: 20px 20px 40px 20px;
   max-width: var(--max-content-width);
