--- a/src/components/ResetForm/ResetForm.css
+++ b/src/components/ResetForm/ResetForm.css
@@ -15,3 +15,12 @@
   text-align: center;
 	color: #F50F50;
 }
+
+.success-message-container {
+  padding: 20px;
+}
+
+.success-message {
+  margin: 20px;
+  font-size: 1.2em;
+}
