--- a/src/components/Archy/Archy.css
+++ b/src/components/Archy/Archy.css
@@ -29,6 +29,7 @@ li .archy::before {
   border: 2px solid #000;
   border-top: 0 none transparent;
   border-right: 0 none transparent;
+  max-height: 25px;
 }
 ul > li:last-child {
   border-left: 2px solid transparent;
