Modable elements should match mobile client and not use on abstract/hover

--- a/src/components/ModalableImage/ModalableImage.css
+++ b/src/components/ModalableImage/ModalableImage.css
@@ -1,11 +1,7 @@
 .modal {
-    display: none;
-}
-
-.modalable-image:hover .modal {
     display: block;
     position: absolute;
-    right: 0px;
+    left: 0px;
     top: 0px;
 }
 
