--- a/src/components/FulfillmentImage/FulfillmentImage.css
+++ b/src/components/FulfillmentImage/FulfillmentImage.css
@@ -11,3 +11,16 @@
 .FulfillmentImage-container:hover .modal {
     display: block;
 }
+
+
+.message {
+    display: none;
+}
+
+.FulfillmentImage-container:hover .message {
+    display: block;
+    position: absolute;
+    top: -10px;
+    right: 0px;
+    width: auto;
+}
